java path + start with different gc